--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,11 +1,12 @@
-<div class="example-config">
-	<div class="row">
-		<div class="col-12 example-col">
-			<button mat-button (click)="restoreColumns()" class="k-button">Restore hidden columns</button>
-			<button mat-button color="primary" (click)="addStrategy()" class="k-button">Add New Strategy </button>
-		</div>
-	</div>
-	<div class="row">
+<mat-toolbar color="primary" id="toolbar">
+	<mat-toolbar-row>
+		<span>Financial Analysis Summary</span>
+		<span class="example-spacer"></span>
+		<mat-icon class="example-icon" aria-hidden="false" (click)="addStrategy()" matTooltip="Add New Strategy">add
+		</mat-icon>
+	</mat-toolbar-row>
+
+	<mat-toolbar-row>
 		<ng-container *ngFor="let strategy of strategies">
 			<div *ngIf="strategy.columnName.toLowerCase() !== 'layername' && strategy.columnName.toLowerCase() !== 'expiringstrategy'"
 				class="col-xs-6 col-md-4 example-col">
@@ -17,17 +18,19 @@
 
 			</div>
 		</ng-container>
-	</div>
-</div>
+	</mat-toolbar-row>
+</mat-toolbar>
 
 <kendo-grid [data]="gridData" [reorderable]="true" (cellClick)="cellClickHandler($event)">
 	<kendo-grid-column field="layerName" title="Layer" width="200" [locked]="true">
 
 	</kendo-grid-column>
 
-	<!-- nned to have at least one locked column -->
-	<kendo-grid-column title="Expiring" width="150" [locked]="false">
-
+	<!-- need to have at least one locked column -->
+	<kendo-grid-column field="expiringPremium" title="Expiring" width="150" [locked]="false">
+		<ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
+			{{dataItem.expiringPremium | currency}}
+		</ng-template>
 	</kendo-grid-column>
 
 	<ng-container *ngFor="let strat of strategies">
@@ -35,10 +38,31 @@
 
 			<kendo-grid-column-group [title]="strat.title" [locked]="false" *ngIf="!isHidden(strat.columnName)"
 				width="350">
+
+				<!-- header template -->
+				<ng-template kendoGridHeaderTemplate let-column let-columnIndex="columnIndex">
+					<span>
+						{{column.title}}
+					</span>
+					<span class="example-spacer"></span>
+					<button mat-mini-fab color="primary" matTooltip="Copy Strategy" (click)="copyStrategy(strat)">
+            <mat-icon>content_copy</mat-icon>
+          </button>
+
+          <button mat-mini-fab matTooltip="Delete Strategy" (click)="deleteStrategy(strat)">
+            <mat-icon>delete</mat-icon>
+          </button>
+
+				</ng-template>
+
 				<kendo-grid-column title="Select Quote" [locked]="false" width="150">
 
 					<ng-template kendoGridEditTemplate let-dataItem="dataItem" let-column="column"
 						let-formGroup="formGroup">
+
+						<ng-template kendoGridCellTemplate let-dataItem="dataItem">
+							{{dataItem.expiringPremium}}
+						</ng-template>
 
 						<mat-select>
 							<mat-option value="option1">Option 1</mat-option>
