--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -13,3 +13,11 @@
 .full-width {
   width: 100%;
 }
+
+.k-header .k-grid-draggable-header {
+  cursor: move !important;
+}
+
+.placeholder {
+  cursor: pointer;
+}
