--- a/app/app.component.html
+++ b/app/app.component.html
@@ -6,13 +6,13 @@
 		</mat-icon>
 	</mat-toolbar-row>
 
-	<mat-toolbar-row class="container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center">
+	<mat-toolbar-row class="container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 		<ng-container *ngFor="let strategy of strategies">
-			<div fxFlex="25%" *ngIf="strategy.columnName !== 'lineOfBusiness' && strategy.columnName !== 'expiringStrategy'"
-				class="col-xs-6 col-md-4 example-col">
+			<div fxFlex="25" *ngIf="strategy.columnName !== 'lineOfBusiness' && strategy.columnName !== 'expiringStrategy'">
 
 				<mat-checkbox id="{{strategy.columnName}}" [disabled]="isDisabled(strategy.columnName)"
-					[checked]="!isHidden(strategy.columnName)" (change)="hideColumn(strategy.columnName)" class="full-width">
+        [checked]="!isHidden(strategy.columnName)" (change)="hideColumn(strategy.columnName)"
+				>
 				</mat-checkbox>
 				<label class="k-checkbox-label" for="{{strategy.columnName}}">{{strategy.title}}</label>
 
