--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,10 +2,14 @@
 	<mat-toolbar-row>
 		<span>Financial Analysis Summary</span>
 		<span class="example-spacer"></span>
-		<mat-icon class="example-icon" aria-hidden="false" (click)="addStrategy()" matTooltip="Add New Strategy">add
-		</mat-icon>
-    <mat-icon class="example-icon" aria-hidden="false" (click)="restoreColumns()" matTooltip="Restore Hidden Strategies">refresh
-		</mat-icon>
+
+    <button mat-icon-button (click)="addStrategy()" matTooltip="Add New Strategy">
+      <mat-icon>add</mat-icon>
+    </button>
+
+    <button mat-icon-button (click)="restoreColumns()" matTooltip="Restore Hidden Strategies">
+      <mat-icon>refresh</mat-icon>
+    </button>
 	</mat-toolbar-row>
 
 	<mat-toolbar-row fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
@@ -44,15 +48,12 @@
 	<ng-container *ngFor="let strat of strategies">
 		<ng-container *ngIf="strat.columnName !== 'lineOfBusiness' && strat.columnName !== 'expiringStrategy'">
 
-			<kendo-grid-column-group [title]="strat.title" [locked]="false" *ngIf="!isHidden(strat.columnName)"
-				width="350">
+			<kendo-grid-column-group [title]="strat.title" [locked]="false" *ngIf="!isHidden(strat.columnName)">
 
 				<!-- header template -->
 				<ng-template kendoGridHeaderTemplate let-column let-columnIndex="columnIndex">
 					<mat-toolbar>
-
-
-						<mat-form-field class="example-full-width">
+						<mat-form-field class="full-width">
 							<textarea matInput
                         #autosize="cdkTextareaAutosize"
                         placeholder="Enter strategy name"
@@ -65,18 +66,19 @@
             </mat-form-field>
 
 							<span class="example-spacer"></span>
+
 							<button mat-icon-button matTooltip="Copy Strategy" (click)="copyStrategy(strat)">
-              <mat-icon>content_copy</mat-icon>
-            </button>
+                <mat-icon>content_copy</mat-icon>
+              </button>
 							<button mat-icon-button class="example-icon" matTooltip="Delete Strategy" (click)="deleteStrategy(strat)">
-            <mat-icon>delete</mat-icon>
-          </button>
+                <mat-icon>delete</mat-icon>                
+              </button>
 					</mat-toolbar>
 
 
 				</ng-template>
 
-				<kendo-grid-column title="Quote" [locked]="false" width="150">
+				<kendo-grid-column title="Quote" [locked]="false" width="200">
 
 					<ng-template kendoGridCellTemplate let-dataItem="dataItem">
 						<div class="placeholder">
@@ -96,16 +98,16 @@
 					</ng-template>
 
 				</kendo-grid-column>
-				<kendo-grid-column title="Premium" [locked]="false" width="150">
+				<!-- <kendo-grid-column title="Premium" [locked]="false" width="150">
 					<ng-template kendoGridCellTemplate let-dataItem="dataItem">
 						{{dataItem.selectedQuote.value | currency}}
 					</ng-template>
 
-          <!-- <ng-template kendoGridFooterTemplate let-column="column">
+           <ng-template kendoGridFooterTemplate let-column="column">
             Total: {{654654 | currency}}
-          </ng-template> -->
-				</kendo-grid-column>
-				<kendo-grid-column title="Difference" [locked]="false" width="150">
+          </ng-template> 
+				</kendo-grid-column> -->
+				<kendo-grid-column title="Difference" [locked]="false" width="200">
 					<ng-template kendoGridCellTemplate let-dataItem="dataItem">
             {{getDifference(dataItem)}}						
 					</ng-template>
