--- a/app/app.component.html
+++ b/app/app.component.html
@@ -12,9 +12,9 @@
     </button>
 	</mat-toolbar-row>
 
-	<mat-toolbar-row fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+	<mat-toolbar-row fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="start center">
 		<ng-container *ngFor="let strategy of strategies">
-			<div fxFlex="25" *ngIf="strategy.columnName !== 'lineOfBusiness' && strategy.columnName !== 'expiringStrategy'">
+			<div fxFlex="33" *ngIf="strategy.columnName !== 'lineOfBusiness' && strategy.columnName !== 'expiringStrategy'">
 
 				<mat-checkbox 
           id="{{strategy.columnName}}"
