add scaling column

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -33,6 +33,10 @@
 
 	</kendo-grid-column>
 
+  <kendo-grid-column field="scaling" title="Scaling" width="200" [locked]="false">
+    
+	</kendo-grid-column>
+
 	<!-- need to have at least one locked column -->
 	<kendo-grid-column field="expiringPremium" title="Expiring" width="150" [locked]="false">
 		<ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
