--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -46,3 +46,7 @@
     border-color: #702082 !important;
     background-color: #702082 !important;
 }
+
+.mat-toolbar-row, .mat-toolbar-single-row {
+  height: auto !important;
+}
